# custom-element

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  SETUP.md
.cargo-husky/hooks/: pre-push
.github/workflows/: build-examples.yml  demos.yml  tests.yml
examples/counter/: Cargo.toml  README.md  index.html
examples/counter/src/: main.rs
examples/hello_world/: Cargo.toml  README.md  index.html
examples/hello_world/src/: main.rs
examples/leptos_in_react/: Cargo.toml  Makefile.toml  README.md  package.json
examples/leptos_in_react/crates/leptos-app/: Cargo.toml
examples/leptos_in_react/crates/leptos-app/src/: app.rs  custom_element_app.rs  leptos_app.rs  lib.rs  state.rs
examples/stateful/: Cargo.toml  index.html
examples/stateful/src/: app.rs  lib.rs  main.rs  state.rs  wasm_rc.rs
src/: bridge.rs  createCustomElement.js  create_custom_element.rs  custom_element.rs  generated_constructor.rs  html_constructors.rs  lib.rs
tests/: abi.rs  arguments.rs  constructors.rs  instances.rs
tests/common/: helpers.rs
