[package]
name = "custom-element"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3.68", features = [
	"Window",
	"Event",
	"Document",
	"HtmlElement",
] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.92"


[dev-dependencies]
wasm-bindgen-test = "0.3.42"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.14", features = ["js"] }
web-sys = { version = "0.3.68", features = [
	"CustomElementRegistry",
	"ElementDefinitionOptions",
] }
