[package]
name = "custom-element"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["web-components", "custom-elements", "html", "web-assembly"]
categories = ["web-programming", "wasm", "gui"]
description = "A CustomElement trait for implementing custom elements (web components) in Rust"
repository = "https://github.com/austintheriot/custom-element"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
web-sys = { version = "0.3.68", features = [
	"Window",
	"Event",
	"Document",
	"HtmlElement",
] }
js-sys = "0.3.68"
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.14", features = ["js"] }
web-sys = { version = "0.3.68", features = [
	"CustomElementRegistry",
	"ElementDefinitionOptions",
] }


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
