[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.68", features = [
	"Window",
	"Document",
	"HtmlElement",
	"HtmlButtonElement",
	"HtmlParagraphElement",
	"CustomElementRegistry",
	"ElementDefinitionOptions",
	"ShadowRoot",
	"ShadowRootMode",
	"ShadowRootInit",
] }
custom-element = { path = "../../" }
js-sys = "0.3.68"
wasm-bindgen = "0.2.92"

# logging
log = "0.4"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"
