[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
web-sys = { version = "0.3.68", features = [
	"Window",
	"Document",
	"HtmlElement",
	"HtmlButtonElement",
	"HtmlParagraphElement",
	"CustomElementRegistry",
	"ElementDefinitionOptions",
	"ShadowRoot",
	"ShadowRootMode",
	"ShadowRootInit",
] }
custom-element = { path = "../../" }
js-sys = "0.3.68"
wasm-bindgen = "0.2.92"
