[package]
name = "leptos-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6.10", features = ["csr"] }
js-sys = "0.3.69"
web-sys = { version = "0.3.68", features = ["IdbFactory", "Window"] }
wasm-bindgen-futures = "0.4.41"
wasm-bindgen = "0.2.92"
custom-element = { path = "../../../../" }

# logging
log = "0.4"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"
